[gd_scene load_steps=39 format=4 uid="uid://b75odrqp86sxp"]

[ext_resource type="Script" path="res://Scenes/Menus/Main Menu.gd" id="1_tgui0"]
[ext_resource type="Texture2D" uid="uid://dxjt6pty0dw5r" path="res://Free/Background/Yellow.png" id="2_2d2og"]
[ext_resource type="FontFile" uid="uid://b4nrpb124t46w" path="res://04B_30__.TTF" id="2_3iutt"]
[ext_resource type="TileSet" uid="uid://nktay86xxaeb" path="res://Scenes/Levels/Ground.tres" id="3_754b6"]
[ext_resource type="Texture2D" uid="uid://ir42lemlc04e" path="res://Free/Menu/Buttons/Play.png" id="4_6x4os"]
[ext_resource type="TileSet" uid="uid://4cel1kee067" path="res://Scenes/Levels/Platforms.tres" id="4_ynmi7"]
[ext_resource type="TileSet" uid="uid://bvye3gd5goo6t" path="res://Scenes/Levels/Objects.tres" id="5_vqaus"]
[ext_resource type="Texture2D" uid="uid://m4pv8hkd0eks" path="res://Free/Menu/Buttons/Levels.png" id="6_vwipv"]
[ext_resource type="Texture2D" uid="uid://ciab3nsa68iab" path="res://Free/Menu/Buttons/Close.png" id="8_vjfjl"]
[ext_resource type="Texture2D" uid="uid://b1yugdd17qwum" path="res://Free/Menu/Buttons/Settings.png" id="9_p6xfj"]
[ext_resource type="Theme" uid="uid://doqtdb66xr3lh" path="res://Scenes/normal.tres" id="10_348fs"]
[ext_resource type="Theme" uid="uid://cb1g4uqcrxru8" path="res://Scenes/exit.tres" id="10_hbpn7"]
[ext_resource type="Texture2D" uid="uid://dwh6imwssfw3v" path="res://Free/Main Character/Appearing (96x96).png" id="13_noisv"]
[ext_resource type="Texture2D" uid="uid://dqs678djhcscv" path="res://Free/Main Character/Idle (32x32).png" id="14_l54dh"]
[ext_resource type="PackedScene" uid="uid://dbkpk1x5mmddo" path="res://Obstacles/Moving Objects/Moving Platform.tscn" id="16_cfas5"]
[ext_resource type="PackedScene" uid="uid://dm2njwnc0fiqh" path="res://Obstacles/Rock Head/Rock Head.tscn" id="17_ibdie"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k5c24"]
atlas = ExtResource("13_noisv")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t10uu"]
atlas = ExtResource("13_noisv")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wkey"]
atlas = ExtResource("13_noisv")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p4og"]
atlas = ExtResource("13_noisv")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvs52"]
atlas = ExtResource("13_noisv")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_88trp"]
atlas = ExtResource("13_noisv")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_aydq7"]
atlas = ExtResource("13_noisv")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbe3x"]
atlas = ExtResource("14_l54dh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1o0e"]
atlas = ExtResource("14_l54dh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmqd4"]
atlas = ExtResource("14_l54dh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxl5p"]
atlas = ExtResource("14_l54dh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr766"]
atlas = ExtResource("14_l54dh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_he2bk"]
atlas = ExtResource("14_l54dh")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmemu"]
atlas = ExtResource("14_l54dh")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1ug7"]
atlas = ExtResource("14_l54dh")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8jlj"]
atlas = ExtResource("14_l54dh")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6014"]
atlas = ExtResource("14_l54dh")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72w64"]
atlas = ExtResource("14_l54dh")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xgcg7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5c24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t10uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wkey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p4og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvs52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88trp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aydq7")
}],
"loop": false,
"name": &"appear",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbe3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1o0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmqd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxl5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr766")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he2bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmemu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1ug7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8jlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6014")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72w64")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}]

[sub_resource type="Curve2D" id="Curve2D_yfymr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 163, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_hrbe1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 384)
}
point_count = 2

[sub_resource type="LabelSettings" id="LabelSettings_olmtj"]
font_size = 50
outline_size = 15
outline_color = Color(0.686275, 0.203922, 0.611765, 1)
shadow_size = 20
shadow_color = Color(0.0862745, 0.027451, 0.0117647, 0.690196)
shadow_offset = Vector2(3, 3)

[node name="MainMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tgui0")

[node name="Parallax2D" type="Parallax2D" parent="."]
texture_filter = 1
repeat_size = Vector2(64, 64)
autoscroll = Vector2(30, 30)
repeat_times = 25

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
texture_repeat = 2
texture = ExtResource("2_2d2og")
flip_h = true
region_rect = Rect2(0, 0, 2048, 2048)

[node name="Ground" type="TileMapLayer" parent="."]
position = Vector2(-135, -97)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AADz/wIAAAAHAAUAAADz/wMAAAAHAAUAAADz/wQAAAAHAAUAAAD0/wIAAAAHAAUAAAD0/wMAAAAHAAUAAAD0/wQAAAAHAAUAAAD1/wIAAAAIAAUAAAD1/wMAAAAIAAUAAAD1/wQAAAAIAAUAAADz/wUAAAAHAAUAAADz/wYAAAAHAAUAAADz/wcAAAAHAAUAAADz/wgAAAAHAAUAAADz/wkAAAAHAAUAAADz/woAAAAHAAUAAADz/wsAAAAKAAQAAAD1/wUAAAAJAAUAAAD1/wYAAAAHAAUAAAD1/wcAAAAHAAUAAAD1/wgAAAAHAAUAAAD1/wkAAAAHAAUAAAD1/woAAAAHAAUAAAD1/wsAAAAHAAUAAAD0/wsAAAAHAAUAAAD0/woAAAAHAAUAAAD0/wkAAAAHAAUAAAD0/wgAAAAHAAUAAAD0/wcAAAAHAAUAAAD0/wYAAAAHAAUAAAD0/wUAAAAHAAUAAAD2/wUAAAAHAAQAAAD3/wUAAAAHAAQAAAD4/wUAAAAHAAQAAAD5/wUAAAAHAAQAAAD6/wUAAAAHAAQAAAD7/wUAAAAHAAQAAAD8/wUAAAAIAAQAAAD8/wYAAAAIAAUAAAD8/wcAAAAIAAUAAAD8/wgAAAAIAAUAAAD8/wkAAAAIAAUAAAD8/woAAAAIAAUAAAD8/wsAAAAIAAUAAAD7/wsAAAAHAAUAAAD6/wsAAAAHAAUAAAD5/wsAAAAHAAUAAAD4/wsAAAAHAAUAAAD3/wsAAAAHAAUAAAD2/wsAAAAHAAUAAAD2/wYAAAAHAAUAAAD3/wYAAAAHAAUAAAD3/wcAAAAJAAQAAAD4/wcAAAAKAAQAAAD4/wgAAAAKAAUAAAD5/wgAAAAHAAUAAAD5/wkAAAAHAAUAAAD6/wkAAAAJAAQAAAD7/wkAAAAKAAQAAAD7/woAAAAKAAUAAAD6/woAAAAJAAUAAAD5/woAAAAHAAUAAAD4/woAAAAHAAUAAAD3/woAAAAHAAUAAAD2/woAAAAHAAUAAAD2/wkAAAAHAAUAAAD2/wgAAAAHAAUAAAD2/wcAAAAHAAUAAAD3/wgAAAAJAAUAAAD4/wkAAAAHAAUAAAD3/wkAAAAHAAUAAAD6/wgAAAAHAAUAAAD6/wcAAAAHAAUAAAD6/wYAAAAHAAUAAAD5/wYAAAAHAAUAAAD4/wYAAAAHAAUAAAD5/wcAAAAHAAUAAAD7/wYAAAAHAAUAAAD7/wcAAAAHAAUAAAD7/wgAAAAHAAUAAAADAAUAAAAHAAQAAAAEAAUAAAAHAAQAAAAFAAUAAAAIAAQAAAACAAUAAAAGAAQAAAACAAYAAAAGAAUAAAACAAcAAAAGAAUAAAACAAgAAAAGAAUAAAACAAkAAAAGAAUAAAACAAoAAAAGAAUAAAACAAsAAAAGAAUAAAAFAAsAAAAIAAUAAAAFAAoAAAAIAAUAAAAFAAkAAAAIAAUAAAAFAAgAAAAIAAUAAAAFAAcAAAAIAAUAAAAFAAYAAAAIAAUAAAAEAAYAAAAHAAUAAAADAAYAAAAHAAUAAAADAAcAAAAJAAQAAAADAAgAAAAJAAUAAAAEAAgAAAAKAAUAAAAEAAcAAAAKAAQAAAADAAkAAAAJAAQAAAADAAoAAAAJAAUAAAAEAAkAAAAKAAQAAAAEAAoAAAAKAAUAAAADAAsAAAAHAAUAAAAEAAsAAAAHAAUAAAD8/wwAAAAIAAUAAAD8/w0AAAAIAAUAAAD7/w8AAAAHAAYAAAD6/w8AAAAHAAYAAAD5/w8AAAAHAAYAAAD4/w8AAAAHAAYAAAD3/w8AAAAHAAYAAAD2/w8AAAAHAAYAAAD1/w8AAAAHAAYAAAD0/w8AAAAHAAYAAADz/w8AAAAHAAYAAADy/w8AAAAHAAYAAADx/w8AAAAHAAYAAADx/w4AAAAHAAUAAADx/w0AAAAHAAUAAADx/wwAAAAHAAUAAADx/wsAAAAHAAUAAADx/woAAAAHAAUAAADx/wkAAAAHAAUAAADx/wgAAAAHAAUAAADx/wcAAAAHAAUAAADx/wYAAAAHAAUAAADx/wUAAAAHAAUAAADx/wQAAAAHAAUAAADx/wMAAAAHAAUAAADx/wIAAAAHAAUAAADy/wIAAAAHAAUAAADy/wMAAAAHAAUAAADy/wQAAAAHAAUAAADy/wUAAAAHAAUAAADy/wYAAAAHAAUAAADy/wcAAAAHAAUAAADy/wgAAAAHAAUAAADy/wkAAAAHAAUAAADy/woAAAAHAAUAAADy/wsAAAAJAAQAAADy/wwAAAAJAAUAAADy/w0AAAAHAAUAAADz/w0AAAAHAAUAAADz/wwAAAAKAAUAAAD0/wwAAAAHAAUAAAD1/wwAAAAHAAUAAAD2/wwAAAAHAAUAAAD3/wwAAAAHAAUAAAD4/wwAAAAHAAUAAAD0/w0AAAAHAAUAAAD0/w4AAAAHAAUAAAD1/w4AAAAHAAUAAAD2/w4AAAAHAAUAAAD3/w4AAAAHAAUAAAD3/w0AAAAHAAUAAAD4/w0AAAAHAAUAAAD5/w0AAAAHAAUAAAD5/wwAAAAHAAUAAAD7/wwAAAAHAAUAAAD6/wwAAAAHAAUAAAD6/w0AAAAHAAUAAAD7/w0AAAAHAAUAAAD7/w4AAAAHAAUAAAD6/w4AAAAHAAUAAAD5/w4AAAAHAAUAAAD4/w4AAAAHAAUAAAD2/w0AAAAHAAUAAAD1/w0AAAAHAAUAAADz/w4AAAAHAAUAAADy/w4AAAAHAAUAAAD8/w4AAAAIAAUAAAD8/w8AAAAIAAYAAAACAAwAAAAGAAUAAAACAA0AAAAGAAUAAAACAA4AAAAGAAUAAAACAA8AAAAGAAYAAAADAA8AAAAHAAYAAAAEAA8AAAAHAAYAAAAFAA4AAAAIAAUAAAAFAA8AAAAIAAYAAAAFAA0AAAAIAAUAAAAFAAwAAAAIAAUAAAADAAwAAAAHAAUAAAAEAAwAAAAHAAUAAAADAA0AAAAHAAUAAAAEAA4AAAAHAAUAAAADAA4AAAAHAAUAAAAEAA0AAAAHAAUAAAD1/wEAAAAIAAUAAAD1/wAAAAAIAAUAAAD1////AAAIAAUAAAD1//7/AAAIAAUAAAD1//3/AAAIAAUAAAD1//z/AAAIAAQAAAD0//z/AAAHAAQAAADz//z/AAAHAAQAAADy//z/AAAHAAQAAADx//z/AAAHAAQAAADw//z/AAAHAAQAAADv//z/AAAHAAQAAADu//3/AAAGAAUAAADu//7/AAAGAAUAAADu////AAAGAAUAAADu/wAAAAAGAAUAAADu/wEAAAAGAAUAAADu/wIAAAAGAAUAAADu/wMAAAAGAAUAAADu/wQAAAAGAAUAAADu/wUAAAAGAAUAAADu/wYAAAAGAAUAAADu/wcAAAAGAAUAAADu/wgAAAAGAAUAAADu/wkAAAAGAAUAAADu/woAAAAGAAUAAADu/wsAAAAGAAUAAADu/wwAAAAGAAUAAADu/w0AAAAGAAUAAADu/w4AAAAGAAUAAADu/w8AAAAGAAYAAADv/w8AAAAHAAYAAADw/w8AAAAHAAYAAADv//3/AAAHAAUAAADv//7/AAAHAAUAAADv////AAAHAAUAAADv/wAAAAAHAAUAAADv/wEAAAAHAAUAAADv/wIAAAAHAAUAAADv/wMAAAAHAAUAAADv/wQAAAAHAAUAAADv/wUAAAAJAAQAAADv/wYAAAAJAAUAAADv/wcAAAAHAAUAAADv/wgAAAAHAAUAAADv/wkAAAAHAAUAAADv/woAAAAHAAUAAADv/wsAAAAHAAUAAADv/wwAAAAHAAUAAADv/w0AAAAHAAUAAADv/w4AAAAHAAUAAADw//3/AAAHAAUAAADw//7/AAAHAAUAAADw////AAAHAAUAAADw/wAAAAAHAAUAAADw/wEAAAAHAAUAAADw/wIAAAAHAAUAAADw/wMAAAAHAAUAAADw/wQAAAAHAAUAAADw/wUAAAAKAAQAAADw/wYAAAAKAAUAAADw/wcAAAAHAAUAAADw/wgAAAAHAAUAAADw/wkAAAAHAAUAAADw/woAAAAHAAUAAADw/wsAAAAHAAUAAADw/wwAAAAHAAUAAADw/w0AAAAHAAUAAADw/w4AAAAHAAUAAADx//3/AAAHAAUAAADx//7/AAAHAAUAAADx////AAAHAAUAAADx/wAAAAAHAAUAAADx/wEAAAAHAAUAAADy//3/AAAHAAUAAADy//7/AAAHAAUAAADy////AAAHAAUAAADy/wAAAAAHAAUAAADy/wEAAAAHAAUAAADz//3/AAAHAAUAAADz//7/AAAHAAUAAADz////AAAHAAUAAADz/wAAAAAJAAQAAADz/wEAAAAJAAUAAAD0//3/AAAHAAUAAAD0//7/AAAHAAUAAAD0////AAAHAAUAAAD0/wAAAAAKAAQAAAD0/wEAAAAKAAUAAADu//z/AAAGAAQAAAA=")
tile_set = ExtResource("3_754b6")

[node name="Platforms" type="TileMapLayer" parent="."]
position = Vector2(-135, -97)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD+/wUAAAARAAIAAAD//wUAAAASAAIAAAAAAAUAAAATAAIAAAAKAAQAAQAAAAAAAQA=")
tile_set = ExtResource("4_ynmi7")

[node name="Objects" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADu/wIAAAAAAAAAAgAPAP//AAAAAAAABQDu//T/AAAAAAAABAAYAPz/AAAAAAAABgA=")
tile_set = ExtResource("5_vqaus")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-415, 47)
sprite_frames = SubResource("SpriteFrames_xgcg7")
animation = &"appear"
autoplay = "appear"

[node name="MovingPlatform" parent="." instance=ExtResource("16_cfas5")]
position = Vector2(381, -8)
scale = Vector2(2, 2)
curve = SubResource("Curve2D_yfymr")
openSpeed = 0.5

[node name="RockHead" parent="." instance=ExtResource("17_ibdie")]
position = Vector2(-280, -133)
scale = Vector2(0.5, 0.5)
curve = SubResource("Curve2D_hrbe1")

[node name="Name" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
offset_left = -334.0
offset_top = -268.0
offset_right = 381.0
offset_bottom = -217.0
theme_override_fonts/font = ExtResource("2_3iutt")
theme_override_font_sizes/font_size = 2
text = "Flynn the Jumpman"
label_settings = SubResource("LabelSettings_olmtj")

[node name="Control" type="Control" parent="."]
texture_filter = 1
anchors_preset = 0
offset_left = -199.0
offset_top = -162.0
offset_right = 206.0
offset_bottom = 248.0
pivot_offset = Vector2(202, 150)
theme = ExtResource("10_348fs")

[node name="Start" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.5
offset_top = 22.0
offset_right = 77.5
offset_bottom = 55.0
grow_horizontal = 2
scale = Vector2(1.88719, 1.88719)
pivot_offset = Vector2(80, 19)
keep_pressed_outside = true
text = "START"
icon = ExtResource("4_6x4os")
clip_text = true
expand_icon = true

[node name="LevelSelect" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -67.0
offset_right = 126.5
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.45996, 1.45996)
pivot_offset = Vector2(127.758, 18.7342)
keep_pressed_outside = true
text = "Select Level"
icon = ExtResource("6_vwipv")
clip_text = true
expand_icon = true

[node name="Settings" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -107.5
offset_top = -158.0
offset_right = 107.5
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(114, 25)
keep_pressed_outside = true
text = "Settings"
icon = ExtResource("9_p6xfj")
clip_text = true
expand_icon = true

[node name="Quit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.5
offset_top = -51.0
offset_right = 109.5
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.36098, 1.36098)
pivot_offset = Vector2(109, 22)
theme = ExtResource("10_hbpn7")
keep_pressed_outside = true
text = "Quit Game"
icon = ExtResource("8_vjfjl")
clip_text = true
expand_icon = true

[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_player_sprite_animation_finished"]
[connection signal="mouse_entered" from="Control/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="Control/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="Control/LevelSelect" to="." method="_on_level_select_mouse_entered"]
[connection signal="pressed" from="Control/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="mouse_entered" from="Control/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="Control/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="Control/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_quit_pressed"]
